--- a/backend 2/package.json
+++ b/backend 2/package.json
@@ -5,6 +5,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "fs": "^0.0.1-security",
     "multer": "^2.0.2",
     "node": "^24.9.0",
